readiness-app/force-app/main/default/objects/Case/fields/InContact_ContactId__c.field-meta.xml
<CustomField>
    <fullName>InContact_ContactId__c</fullName>
    <label>InContact_ContactId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>