readiness-app/force-app/main/default/objects/Case/fields/PostQueueSeconds__c.field-meta.xml
<CustomField>
    <fullName>PostQueueSeconds__c</fullName>
    <label>PostQueueSeconds</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>