readiness-app/force-app/main/default/objects/Case/fields/preQueueSeconds__c.field-meta.xml
<CustomField>
    <fullName>preQueueSeconds__c</fullName>
    <label>preQueueSeconds</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>